Update: Parking Slots cards; minor position changes

--- a/ParkingFlow/Views/ParkingSlots/Create.cshtml
+++ b/ParkingFlow/Views/ParkingSlots/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ParkingSlots
+﻿
+@model ParkingSlots
 <form method="post">
     <div class="row pb-2">
         <h2 class="text-secondary">Create a Parking Slot</h2>
