--- a/ParkingFlow/Views/Shared/_Layout.cshtml
+++ b/ParkingFlow/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-xl bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,10 +49,10 @@
                     </div>
                         
                     </ul>
-                    <form class="d-flex">
+                    <!--<form class="d-flex">
                         <input class="form-control me-sm-2" type="search" placeholder="Search">
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                    </form>
+                    </form>-->
                 </div>
             </div>
         </nav>
