--- a/ParkingFlow/Views/Bookings/Index.cshtml
+++ b/ParkingFlow/Views/Bookings/Index.cshtml
@@ -1,49 +1,59 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@model List<Bookings>
-<div class="container">
-    <div class="row pt-4 pb-3">
-        <div class="col-6">
-            <h1 class="mt-4">My Bookings Dashboard</h1>
-            <p>Manage your booked parkings here.</p>
-            <hr />
-        </div>
-        <div class="col-6 text-end">
-            <a asp-controller="Bookings" asp-action="Create" class="btn btn-primary">Create New Booking</a>
-        </div>
-    </div>
-</div>
+﻿@model IEnumerable<ParkingFlow.Models.Bookings>
 
-<table class="table table-bordered table-striped">
+@{
+    ViewData["Title"] = "Index";
+}
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
     <thead>
         <tr>
-            <th>Booking ID</th>
-            <th>User</th>
-            <th>Parking Slot ID</th>
-            <th>Date</th>
-            <th>Time Start</th>
-            <th>Time End</th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ParkingSlot)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BookingDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndTime)
+            </th>
             <th></th>
         </tr>
     </thead>
-
     <tbody>
-        @foreach (var obj in Model)
-        {
-            <tr>
-                <td>@obj.Id</td>
-                <td>@obj.UserId</td>
-                <td>@obj.ParkingSlotId</td>
-                <td>@obj.BookingDate</td>
-                <td>@obj.StartTime</td>
-                <td>@obj.EndTime</td>
-                <td>
-                    <a asp-controller="ParkingSlots" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-warning">Edit</a>
-                    <a asp-controller="ParkingSlots" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger">Delete</a>
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ParkingSlot.SlotCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BookingDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StartTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EndTime)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
+</table>
