Update: BookingsController POST Create method, Bookings Index View
- exclude UserId from binding
- add ModelState.Remove() method to clear UserId = null error

--- a/ParkingFlow/Views/Bookings/Index.cshtml
+++ b/ParkingFlow/Views/Bookings/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ParkingFlow.Models.Bookings>
+﻿@using ParkingFlow.Models
+@model IEnumerable<ParkingFlow.Models.Bookings>
 
 @{
     ViewData["Title"] = "Index";
