Update: BookingsController.cs - show occupied slots right after booking at current time

--- a/ParkingFlow/Views/ParkingSlots/Index.cshtml
+++ b/ParkingFlow/Views/ParkingSlots/Index.cshtml
@@ -164,7 +164,7 @@
 
                             if (filteredBooking != null)
                             {
-                                <div class="mt-2 small text-muted">
+                                <div class="mt-2 small text-primary">
                                     Booked: @filteredBooking.StartTime.ToString(@"hh\:mm") - @filteredBooking.EndTime.ToString(@"hh\:mm")
                                 </div>
                             }
