--- a/ParkingFlow/Views/ParkingSlots/Index.cshtml
+++ b/ParkingFlow/Views/ParkingSlots/Index.cshtml
@@ -119,15 +119,15 @@
     <form asp-action="Index" method="get" class="row g-3 mb-4">
         <div class="col-md-3">
             <label>Date</label>
-            <input type="date" name="bookingDate" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd")" required />
+            <input type="date" name="bookingDate" class="form-control" value="@(Context.Request.Query["date"].ToString() != "" ? Context.Request.Query["date"].ToString() : DateTime.Now.ToString("yyyy-MM-dd"))" />
         </div>
         <div class="col-md-3">
             <label>Start Time</label>
-            <input type="time" name="startTime" class="form-control" value="@DateTime.Now.ToString("HH:mm")" required />
+            <input type="time" name="startTime" class="form-control" value="@(Context.Request.Query["startTime"].ToString() != "" ? Context.Request.Query["startTime"].ToString() : DateTime.Now.ToString("HH:mm"))" />
         </div>
         <div class="col-md-3">
             <label>End Time</label>
-            <input type="time" name="endTime" class="form-control" value="@DateTime.Now.AddMinutes(60).ToString("HH:mm")" required />
+            <input type="time" name="endTime" class="form-control" value="@(Context.Request.Query["endTime"].ToString() != "" ? Context.Request.Query["endTime"].ToString() : DateTime.Now.AddMinutes(30).ToString("HH:mm"))" />
         </div>
         <div class="col-md-3 d-flex align-items-end">
             <button type="submit" class="btn btn-primary w-100">Check Availability</button>
