--- a/ParkingFlow/Views/Bookings/Delete.cshtml
+++ b/ParkingFlow/Views/Bookings/Delete.cshtml
@@ -1,51 +1,40 @@
 ﻿@model ParkingFlow.Models.Bookings
-
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Confirm Deletion";
 }
 
-<h1>Delete</h1>
+<div class="container mt-5">
+    <div class="card shadow-sm border-danger">
+        <div class="card-header bg-danger text-white">
+            <h4 class="mb-0">Delete Booking Confirmation</h4>
+        </div>
+        <div class="card-body">
+            <p class="text-danger fw-semibold mb-4">
+                Are you sure you want to delete this booking? This action cannot be undone.
+            </p>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Bookings</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParkingSlot)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParkingSlot.SlotCode)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BookingDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BookingDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndTime)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+            <dl class="row">
+                <dt class="col-sm-4">User ID</dt>
+                <dd class="col-sm-8">@Model.UserId</dd>
+
+                <dt class="col-sm-4">Parking Slot</dt>
+                <dd class="col-sm-8">@Model.ParkingSlot?.SlotCode</dd>
+
+                <dt class="col-sm-4">Booking Date</dt>
+                <dd class="col-sm-8">@Model.BookingDate.ToShortDateString()</dd>
+
+                <dt class="col-sm-4">Start Time</dt>
+                <dd class="col-sm-8">@Model.StartTime.ToString(@"hh\:mm")</dd>
+
+                <dt class="col-sm-4">End Time</dt>
+                <dd class="col-sm-8">@Model.EndTime.ToString(@"hh\:mm")</dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <button type="submit" class="btn btn-danger me-2">🗑️ Confirm Delete</button>
+                <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+            </form>
+        </div>
+    </div>
 </div>
