--- a/ParkingFlow/wwwroot/css/site.css
+++ b/ParkingFlow/wwwroot/css/site.css
@@ -1,3 +1,9 @@
+.tech-font {
+    font-family: 'Share Tech Mono', monospace;
+    letter-spacing: 1px;
+    font-size: 1rem;
+}
+
 html {
   font-size: 14px;
 }
@@ -18,5 +24,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: 'Share Tech Mono', monospace;
 }
